# UCSCXenaToolsPy

./: .gitignore  COMPARISON.md  README.md  pyproject.toml  regen_catalog.py
docs/: conf.py  fetch-api-tutorial.md  getting-started.md  index.rst  migration-from-r.md  molecule-query-tutorial.md  workflow-tutorial.md  xena-datasets-catalog.html
docs/api/: core.rst  fetch.rst  index.rst  query.rst  tcga.rst  utils.rst  workflow.rst
src/ucscxenatoolspy/: __init__.py
src/ucscxenatoolspy/api/: client.py  datalog.py
src/ucscxenatoolspy/core/: defaults.py  xena_data.py  xena_hub.py
src/ucscxenatoolspy/data/: xena_data.parquet
src/ucscxenatoolspy/fetch/: dense.py
src/ucscxenatoolspy/query/: __init__.py  molecule_value.py
src/ucscxenatoolspy/tcga/: __init__.py
src/ucscxenatoolspy/utils/: cache.py  url.py
src/ucscxenatoolspy/workflow/: download.py  filter.py  generate.py  prepare.py  query.py  query_probe_map.py  scan.py
tests/: regen_catalog.py  test_core.py  test_molecule_value.py
